@@ -1,3 +1,7 @@
+2003-06-29  Richard Hult  <richard@imendio.com>
+
+	* sv.po: Update.
+
 2003-06-29  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
