@@ -1,3 +1,8 @@
+2003-06-29  Richard Hult  <richard@imendio.com>
+
+	* src/dh-window.c (dh_window_new): Don't make the size relative to
+	the resolution, that didn't work out very well.
+
 2003-06-28  Mikael Hallendal  <micke@imendio.com>
 
 	* src/dh-window.c: 
